feat( app） 去除登陆日志， 增加授权码校验